# ribbit-network-frog-hardware

./: .all-contributorsrc  .gitignore  .gitmodules  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Pisugar-power-manager.sh  README.md  Wall Hook Mechanism.stl  block_diagram.md  co2.py  docker-compose.yml  entry.sh  index.html  mkdocs.yml  ribbit-network-frog-sensor.code-workspace  ribbit_network_frog_sensor_bom.csv
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: docs-preview.yml  docs.yml  esp32.yaml  software-co2.yaml  software-gpsd.yaml  v1-software-co2.yaml  v1-software-gpsd.yaml  v2-software-co2.yaml  v3-software-co2.yaml
1-parts/1-parts/: index.html
2-3d-printing/2-3d-printing/: index.html
3-software/3-software/: index.html
4-assembly/4-assembly/: index.html
5-testing/5-sensor-testing/: index.html
6-sensor-placement/6-sensor-placement/: index.html
7-done/7-done/: index.html
8-debugging/8-debugging/: index.html
assembly-instructions/: 0-start-here.md  1-parts.md  2-3d-printing.md  3-enclosure.md  3-software.md  4-assembly.md  4-electronics-weatherproofing.md  4-electronics.md  5-electronics-assembly.md  5-software.md  6-done.md  6-sensor-placement.md  7-done.md  7-sensor-placement.md  8-done.md  9-debugging.md  index.md
assembly-instructions/1-parts/: 1-parts.md
assembly-instructions/2-3d-printing/: 2-3d-printing.md
assembly-instructions/3-software/: 3-software.md
co2/: Dockerfile  co2.py
firmware/: test.txt
hardware/: Frog Sensor - Ribbit Network Bill of Materials - BOM.csv  README.md  frog_sensor_bom.csv  ribbit_network_frog_sensor_bom.csv
mechanical/: 5mm Socket - Part 1.stl  V4 - Head.stl  V4 - Lid.stl  V4 - Shroud.stl
search/: search_index.json
software/: .dockerignore  README.md  README.md.backup  balena.yml  docker-compose.yml
software/co2/: .gitignore  .pylintrc  Dockerfile.template  co2.py  pyproject.toml
software_esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
software_esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
v1/: README.md
v2/: README.md  ribbit_network_frog_sensor_bom.csv
v3/: README.md
v3/software/gps/: Dockerfile.template  pyproject.toml
v4/: README.md  S-Hook Mechanism.stl  ribbit_network_frog_sensor_bom.csv
v4/software/main/: CMakeLists.txt  app_main.c  idf_component.yml  nvs.c  nvs.h  shell.c  shell.h  util.h  wifi.c
wiki/: Background-Research.md  CO2-Sensor-Selection.md  README.md  SCD30-CO2-Sensor-Calibration-Log.md
(+193 files in other folders)
